@@ -9,6 +9,7 @@
   "dependencies": [
     "base >= 1.1",
     "(?) space-exploration-postprocess",
-    "(?) angelsrefining"
+    "(?) angelsrefining",
+    "(?) angelsbioprocessing"
   ]
 }
